# kceditor

./: .gitignore  CMakeLists.txt  README.md  sbuild.sh  syntax.json  testFile.cpp
include/: TextArea.h
include/ncurses/: Makefile  ncurses_cfg.h
include/utils/: json11.hpp  lexerUtils.hpp
source/: TextArea.cc  main.cc  testSouce.cpp
